<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="16dp">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextNameValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewLocationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLatitudeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude" />

                <TextView
                    android:id="@+id/textViewLatitudeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLongitudeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude" />

                <TextView
                    android:id="@+id/textViewLongitudeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/textViewDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewPhotoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/photo" />
    <FrameLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@color/card_view_shadow_start_color"
        >

        <Button
            android:id="@+id/buttonShoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/shoot" />

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/add" />
        </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>