<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="16dp" />

        <TextView
            android:id="@+id/textViewNameValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
          />

        <TextView
            android:id="@+id/textViewLocationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_margin="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewLatitudeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                   />

                <TextView
                    android:id="@+id/textViewLatitudeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textViewLongitudeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                     />

                <TextView
                    android:id="@+id/textViewLongitudeValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>